2006-10-05  Vladimir Olexa  <vladimir.olexa@gmail.com>

Reviewed by Timothy.

        Bug: http://bugs.webkit.org/show_bug.cgi?id=9887
        Continuous spell checking now remembers user's setting. The change is applied globally,
        meaning, both TextArea and TextField are affected when either of them enables/disables
        spell checking.

        * WebView/WebPreferenceKeysPrivate.h: added a define for WebContinuousSpellCheckingEnabled
        * WebView/WebView.m:
        (-[WebViewPrivate init]): reads WebContinuousSpellCheckingEnabled from NSUserDefaults
        (-[WebView setContinuousSpellCheckingEnabled:]):
        (-[WebView isContinuousSpellCheckingEnabled]):



Canonical link: https://commits.webkit.org/14122@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16823 268f45cc-cd09-0410-ab3c-d52691b4dbfc